# examples

./: .gitignore
golang/: README.md  go.mod  go.sum  main.go
golang-tui/: README.md  go.mod  go.sum  main.go
python/: README.md  cli.py  fastrtc.html  main.py  requirements.txt  test_fastrtc.py
rust/: Cargo.toml  README.md
rust-tui/: Cargo.toml  README.md
rust-tui/src/: main.rs
rust/cpal_test/: Cargo.toml
rust/cpal_test/src/: main.rs
rust/src/: main.rs
typescript/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.ts  package.json
typescript/certificates/: localhost-key.pem  localhost.pem
typescript/src/app/: globals.css  layout.tsx  page.tsx
typescript/src/components/: AudioVisualizer.tsx  VoiceAgent.tsx
typescript/src/hooks/: useVoiceAgent.ts
