[package]
name = "rust-tui-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.36", features = ["full"] }
cpal = "0.15"
serde_json = "1.0"
futures = "0.3"
streamcore-rust-sdk = "0.1"
anyhow = "1.0"
